tooling/nargo_cli/tests/snapshots/execution_success/loop_keyword/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/71WwW6DMAx1gEAZq1Ztlx122G2HXcLKRo8c9iNRK76DTy+VnGK9hqhqQyNFxth5z88kgKLLocaZ0XVDsW3ZlmwTEU/H2bFv7ht1Cbwx8XemaUqPvoj1b0vGVMvgG4e/UP9NwTj/w4QvtTje1Tgrcf1M0/5YSr97fkvqfwtorlhrzf4acgnWEcRSz70E+paIWBdJ0yagaS16eK+GDWCpx+g774ksPvaPw9bxset8xHhnrBfmyUXvcF+5s6k9uQnEXO4321PuRySubIbrS3B9BrhSiBWBOlbg554afftubh15ODXgKM+6W5+Vr+4QXxHgw3cqeXxN82ddQ65hi+cn9jv1VeAScFU0/VNkQ3z+dmeM402HqQ+yfwT8GvL/2H+a0dHdWGff2rrf2t7+2sOh2Vvs02nIb88Ri/Ob1swJAAA=",
  "debug_symbols": "ndLRCoMgFAbgd/G6i7Scba8yRlidQhAL02BE7z6LTmuDwfDKjn/fUdSZNFD5rlSm7Udyu8+kskpr1ZW6r6VTvQmz85IQLEtnAcIUOeVBDdKCceRmvNYJmaT220/jIM02OmlDmiYETBPG0LBVGtavJXnr9DelXOyY8uLg/H8vCvTiGuFZmu+e0TTG88Nforzg6Asa4TOG62cZi/E5Q5/HnH8mKPqo/XO8PvF5eo9QyVrZ7/c6SatkpWEvW2/qU+qeAyb43gfb19B4C2unLQu9Xw==",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": [
    "check_loop"
  ]
}
