tooling/nargo_cli/tests/snapshots/execution_success/loop_keyword/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/5XDsQkAAADCMAv+f7PuTgaCFm19Arunwj5IAAAA",
  "debug_symbols": "ndLRCoMgFAbgd/G6i7Scba8yRlidQhAV02BE7z6LbBEMhld6/P2OIs6og8YPtVC9HtHjOaPGCinFUEvdcie0CqvzkqFY1s4ChCV0yoMy3IJy6KG8lBmauPTbptFwtY2O25DmGQLVhTE07IWEdbZkX53/ppiyHWNaHZz+71kVPbsneJKXuyc4T/H08Lckz2j0FU7wBYnnFwVJ8SWJvkx5/4Lh6C/3f4WKt8Jef9zEreCNhL3svWpPqXubmMQfa6xuofMW1k5bFnp/AA==",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
